# invoice-processing-automation

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: approval.py  config.py  dependencies.py  extract.py  main.py  models.py  sheets.py  slack.py  validate.py
app/core/: exceptions.py  logging_config.py
app/db/: base.py  models.py  session.py
app/integrations/: airtable_client.py  sheets.py  sheets_client.py  slack.py
app/models/: batch.py  invoice.py  review.py
app/repositories/: invoice_repository.py
app/routes/: health.py  invoices.py
app/services/: batch_service.py  confidence.py  confidence_service.py  deduplication.py  export_service.py  extraction.py  extraction_service.py  ingestion.py  metrics_service.py  pipeline.py  review_service.py  validation.py  validation_service.py
docs/: architecture.md  problem-definition.md  runbook.md
docs/decisions/: 001-multi-format-parsing-strategy.md  002-line-item-extraction-approach.md  003-export-format-design.md
eval/: evaluate.py  test_set.jsonl
eval/results/: eval_2026-03-28.json  eval_2026-04-02.json
migrations/: README  env.py
migrations/versions/: 0001_initial.py
prompts/: invoice_extraction.txt
scripts/: evaluate.py
tests/: conftest.py  test_confidence.py  test_deduplication.py  test_extraction.py  test_ingestion.py  test_pipeline.py  test_validation.py
tests/integration/: test_batch.py  test_extraction.py  (+7 more)
(+32 files in other folders)
